tests/snapshots/test_runner__tests__compiler__typecheck__promise_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: Integer
  = let! x = !1
    !x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/promise_3.kk:3:5
  │
3 │     !x
  │     ^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + !Integer  |
    +---------------+-------------+
