tests/snapshots/test_runner__tests__compiler__typecheck__record_type_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x : {x: String, y: String} = {
  x: 2,
  y: "hello",
  z: { x: 2 }
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_1.kk:4:3
  │
4 │   z: { x: 2 }
  │   ^ No such property
  │
  = The expected properties are:
      x
      y
