tests/snapshots/test_runner__tests__compiler__typecheck__record_type_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: {
  x: Integer,
  y: Integer
} = {
  x = 1
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_5.kk:4:5
  │
4 │   } = {
  │ ╭─────^
5 │ │   x = 1
6 │ │ }
  │ ╰─^ Missing properties
  │
  = The missing properties are:
      y
