tests/snapshots/test_runner__tests__compiler__typecheck__record_update_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do
  let a = { x: 2 y: { z: 3 } }
  let b = a.{ b: 3 } # 'b' is a non-existing property
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_update_1.kk:3:15
  │
3 │   let b = a.{ b: 3 } # 'b' is a non-existing property
  │               ^ No such property or function
  │
  = Available properties:
      x
      y
